--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,41 @@
+<!DOCTYPE html>
 <html>
+​
 <head>
-    <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-    <body>
-        <iframe src="https://live5.thetavideoapi.com/hls/live/2015929/hls_streamer_us_central_0070/playlist.m3u8" 
-        border="0" 
-        width="100%" 
-        height="100%"
-        allowfullscreen/>
-    </body>
+   <meta charset="utf-8">
+   <title>Where To?</title>
+   <link href="https://vjs.zencdn.net/7.15.4/video-js.css" rel="stylesheet" />
+   <script src='https://vjs.zencdn.net/7.15.4/video.js'></script>
+   <script src="https://cdn.jsdelivr.net/npm/hls.js@0.12.4"></script>
+   <script src="https://d1ktbyo67sh8fw.cloudfront.net/js/theta.umd.min.js"></script>
+   <script src="https://d1ktbyo67sh8fw.cloudfront.net/js/theta-hls-plugin.umd.min.js"></script>
+   <script src="https://d1ktbyo67sh8fw.cloudfront.net/js/videojs-theta-plugin.min.js"></script>
+</head>
+​
+<body>
+   play video boii {{.}}
+   <video id="player-container" controls></video>
+</body>
+<script>
+   const optionalHlsOpts = null;
+   const optionalThetaOpts = {
+      allowRangeRequests: true, // false if cdn does not support range headers  
+   };
+   const player = window.player = videojs('player-container', {
+  techOrder: ["theta_hlsjs", "html5"],
+  sources: [{
+    src: "https://live5.thetavideoapi.com/hls/live/2015908/hls_streamer_us_central_0053/playlist.m3u8",
+    type: "application/vnd.apple.mpegurl",
+    label: "auto"
+  }],
+  theta_hlsjs: {
+    streamId: "stream_rwpn0zj4g6xxd2mqzgie4kwqr",
+    userId: "YOUR_AUTHED_USER_ID",
+    walletUrl: "wss://api-wallet-service.thetatoken.org/theta/ws",
+    onWalletAccessToken: null,
+    hlsOpts: null
+  }
+});
+</script>
+​
 </html>
