--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 ​
 <head>
    <meta charset="utf-8">
-   <title>Where To?</title>
+   <title>Theta Stream Test</title>
    <link href="https://vjs.zencdn.net/7.15.4/video-js.css" rel="stylesheet" />
    <script src='https://vjs.zencdn.net/7.15.4/video.js'></script>
    <script src="https://cdn.jsdelivr.net/npm/hls.js@0.12.4"></script>
