--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   sources: [{
     src: "https://live5.thetavideoapi.com/hls/live/2015908/hls_streamer_us_central_0053/playlist.m3u8",
     type: "application/vnd.apple.mpegurl",
-    label: "auto"
+    label: "1080p"
   }],
   theta_hlsjs: {
     streamId: "stream_rwpn0zj4g6xxd2mqzgie4kwqr",
